--- a/HMGreenCityMLM/HMGreenCityMLM/Views/AdminReports/BusinessReport.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/AdminReports/BusinessReport.cshtml
@@ -45,11 +45,11 @@
                                                     </div>
                                                     <div class="col-md-3">
                                                         From Date
-                                                        @Html.TextBoxFor(m => m.FromDate, new { @class = "form-control", @placeholder = "From  Date", @readonly = "read" })
+                                                        @Html.TextBoxFor(m => m.FromDate, new { @class = "form-control", @placeholder = "From  Date" })
                                                     </div>
                                                     <div class="col-md-3">
                                                         To Date
-                                                        @Html.TextBoxFor(m => m.ToDate, new { @class = "form-control", @placeholder = "To  Date", @readonly = "read" })
+                                                        @Html.TextBoxFor(m => m.ToDate, new { @class = "form-control", @placeholder = "To  Date" })
                                                     </div>
 
                                                     <div class="col-md-3">
@@ -110,8 +110,8 @@
                                                                 <td></td>
                                                                 <td></td>
                                                                 <td>Total</td>
-                                                                <td style="text-align:right"><b style="color:blue;text-align:left">@ViewBag.TotalNetAmount</b></td>
-                                                                <td style="text-align:right"> <b style="color:blue;text-align:left">@ViewBag.TotalBV</b></td>
+                                                                <td style="text-align:right"><b style="color:#ff0000;text-align:left">@ViewBag.TotalNetAmount</b></td>
+                                                                <td style="text-align:right"> <b style="color:#ff0000;text-align:left">@ViewBag.TotalBV</b></td>
                                                             </tr>
                                                         </tfoot>
                                                     </table>
