Autofill issue in Payout dispatch Resolved

--- a/HMGreenCityMLM/HMGreenCityMLM/Views/Admin/PayPayout.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/Admin/PayPayout.cshtml
@@ -193,8 +193,12 @@
                         select: function (event, ui) {
                             var str = ui.item.label;
                             var strsplit = str.split("(");
-
-                            $('#ToLoginID').val(strsplit[1].substr(0, strsplit[1].length - 1));
+                            if (strsplit[2] != undefined) {
+                                $('#ToLoginID').val(strsplit[2].substr(0, strsplit[2].length - 1));
+                            } else {
+                                $('#ToLoginID').val(strsplit[1].substr(0, strsplit[1].length - 1));
+                            }
+                            
                         }
                     })
                 }
