--- a/HMGreenCityMLM/HMGreenCityMLM/Views/AdminReports/AssociateIncomeReport.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/AdminReports/AssociateIncomeReport.cshtml
@@ -45,7 +45,8 @@
                                                     </div>
                                                     <div class="col-lg-3">
                                                         Login ID
-                                                        @Html.TextBoxFor(m => m.ToLoginID, new { @class = "form-control" })
+                                                        @Html.TextBoxFor(m => m.LoginId, new { @class = "form-control"})
+                                                        @Html.HiddenFor(m => m.ToLoginID)
                                                     </div>
 
                                                     <div class="col-lg-3">
@@ -137,8 +138,7 @@
     </div>
 }
 
-<script src="../vendor/jquery/jquery.min.js"></script>
-
+@*<script src="../vendor/jquery/jquery.min.js"></script>
 <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
 <link rel="stylesheet" type="text/css" href="https://code.jquery.com/ui/1.12.0/themes/smoothness/jquery-ui.css">
 
@@ -146,12 +146,45 @@
 <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
 <link rel="stylesheet" type="text/css" href="https://code.jquery.com/ui/1.12.0/themes/smoothness/jquery-ui.css">
 <script src="../..//WebsiteCss/js/jquery.min.js"></script>
+<script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
+<link rel="stylesheet" type="text/css" href="https://code.jquery.com/ui/1.12.0/themes/smoothness/jquery-ui.css">*@
+<script src="../../WebsiteCss/js/jquery.js"></script>
 
 <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
 <link rel="stylesheet" type="text/css" href="https://code.jquery.com/ui/1.12.0/themes/smoothness/jquery-ui.css">
-
 <script>
+    $(document).ready(function () {
+        $("input").attr("autocomplete", "off");
 
+        var cityuse = [];
+        $("#loader").css({ 'display': '' });
+        $.ajax({
+            url: '/AdminReports/GetUserList',
+            type: 'Post',
+            success: function (response) {
+                if (response != null) {
+
+
+                    $(response).each(function (index, item) {
+                        cityuse.push(item.UserName + "(" + item.LoginIDD + ")");
+                    });
+
+                    $('#LoginId').autocomplete({
+                        source: cityuse,
+                        select: function (event, ui) {
+                            var str = ui.item.label;
+                            var strsplit = str.split("(");
+
+                            $('#ToLoginID').val(strsplit[1].substr(0, strsplit[1].length - 1));
+                        }
+                    })
+                }
+            }, error: function () {
+                alert('Some Thing wrong!');
+                $("#loader").css({ 'display': 'none' });
+            }
+        });
+    });
 
     $('#FromDate').datepicker({
         dateFormat: 'dd/mm/yy',
