--- a/HMGreenCityMLM/HMGreenCityMLM/Views/AdminReports/BusinessReport.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/AdminReports/BusinessReport.cshtml
@@ -42,6 +42,7 @@
                                                     <div class="col-md-3">
                                                         Login Id
                                                         @Html.TextBoxFor(m => m.LoginId, new { @class = "form-control", @placeholder = "Login Id" })
+                                                        @Html.HiddenFor(m => m.ToLoginID)
                                                     </div>
                                                     <div class="col-md-3">
                                                         From Date
