--- a/HMGreenCityMLM/HMGreenCityMLM/Views/Admin/PayPayout.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/Admin/PayPayout.cshtml
@@ -3,9 +3,11 @@
     ViewBag.Title = "Pay Payout";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
-<p style="color: red">
-    @TempData["PayPayout"]
-</p>
+<style>
+    #dataTables-example{
+        max-height:600px;
+    }
+</style>
 @using (Html.BeginForm("PayPayout", "Admin", FormMethod.Post, new { @id = "form1" }))
 {
 
@@ -16,6 +18,9 @@
             <div class="content-header row">
             </div>
             <div class="content-body">
+                <p style="color: red">
+                    @TempData["PayPayout"]
+                </p>
                 <!-- users edit start -->
                 <section class="users-edit">
                     <div class="card">
@@ -50,7 +55,7 @@
                                             <div class="col-md-4">
                                                 <br />
                                                 @*<a href="/Admin/PayVoucherAchiever" class="btn btn-info">Get Details</a>*@
-                                                <input type="submit" class="btn btn-info" value="Get Details" name="GetDetails" onclick="return validateLogin();"  />
+                                                <input type="submit" class="btn btn-info" value="Get Details" name="GetDetails" onclick="return validateLogin();" />
                                                 <input type="submit" class="btn btn-success" value="Export To Excel" name="Export" />
                                             </div>
                                         </div>
@@ -62,19 +67,24 @@
                                             {
                                                 int i = 1;
                                                 <div class="panel-body table-responsive">
-                                                    <table class="table table-striped table-bordered table-hover" id="dataTables-example">
+                                                    <table class="table table-striped table-bordered table-hover"  id="dataTables-example">
                                                         <thead>
                                                             <tr>
-                                                                <th>Sr No.</th> 
+                                                                <th>Sr No.</th>
                                                                 <th>Login Id</th>
                                                                 <th>Name</th>
                                                                 <th>Account No</th>
                                                                 <th>Bank Name</th>
                                                                 <th>IFSC Code</th>
                                                                 <th>Amount</th>
+                                                                <th style="padding: 10px 50px;white-space: nowrap;">Remarks</th>
                                                                 <th style="padding: 10px 50px;white-space: nowrap;">Pay Amount</th>
-                                                                <th  style="padding: 10px 50px;white-space: nowrap;">Transaction No</th>
-                                                                <th>Transaction Date</th>
+                                                                <th style="padding: 10px 50px;white-space: nowrap;">Payment Mode</th>
+                                                                <th id="thbankname" style="padding: 10px 50px;white-space: nowrap;display:none">Bank Name</th>
+                                                                <th id="thbranch" style="padding: 10px 50px;white-space: nowrap;display:none">Bank Branch</th>
+                                                                <th style="padding: 10px 50px;white-space: nowrap;display:none" id="thtransactionnumber">Transaction No</th>
+                                                                <th style="padding: 10px 50px;white-space: nowrap;display:none" id="thtransactiondate">Transaction Date</th>
+
                                                             </tr>
                                                         </thead>
                                                         <tfoot>
@@ -86,6 +96,7 @@
                                                                 <th></th>
                                                                 <th><b>Total</b></th>
                                                                 <th>@ViewBag.Total</th>
+                                                                <th></th>
                                                                 <th></th>
                                                                 <th></th>
                                                                 <th></th>
@@ -103,21 +114,34 @@
                                                                     <td>@Item.BankName</td>
                                                                     <td>@Item.IFSCCode</td>
                                                                     <td hidden="hidden">
-                                                                       @Item.Amount
+                                                                        @Item.Amount
                                                                     </td>
                                                                     <td>
                                                                         @Item.Amount1
                                                                     </td>
-                                                                   
-                                                                    <td width="200px">
-                                                                        <input type="text" class="form-control" id="txtamount_ @i" name="txtamount_ @i" />
+                                                                    <td>
+                                                                        <input type="text" class="form-control" id="txtremarks_@i" name="txtremarks_@i" />
                                                                     </td>
                                                                     <td width="200px">
-                                                                        <input type="text" class="form-control" id="txttranno_ @i" name="txttranno_ @i" />
-                                                                        <input type="hidden" class="form-control" id="Fk_UserId_ @i" name="Fk_UserId_ @i" value="@Item.Fk_UserId" />
+                                                                        <input type="text" class="form-control" id="txtamount_@i" name="txtamount_@i" />
                                                                     </td>
                                                                     <td>
-                                                                        <input type="date" class="form-control" id="txttransdate" name="txttransdate_ @i" />
+                                                                        @Html.DropDownListFor(m => m.PaymentMode, new SelectList(ViewBag.ddlpaymentmode, "Value", "Text"), new { @class = "form-control ddlPaymentMode_" + @i, @onchange = "return getpaymentdetails(" + @i + ");" })
+                                                                        <input type="hidden" name="paymentmode_@i" />
+                                                                    </td>
+                                                                    <td width="200px" id="tdbankname_@i">
+                                                                        <input type="text" placeholder="Bank Name" style="display:none;width:200px" class="form-control" id="txtbankname_@i" name="txtbankname_@i" />
+                                                                    </td>
+                                                                    <td width="200px" id="tdbranchname_@i">
+                                                                        <input type="text" placeholder="Branch Name" style="display:none;width:200px" class="form-control" id="txtbankbranch_@i" name="txtbankbranch_@i" />
+                                                                    </td>
+                                                                    <td width="200px" id="tdtrancation_@i">
+                                                                        <input type="text" placeholder="Transaction No" style="display:none;width:200px" class="form-control" id="txttranno_@i" name="txttranno_@i" />
+                                                                        <input type="hidden" class="form-control" id="Fk_UserId_@i" name="Fk_UserId_@i" value="@Item.Fk_UserId" />
+                                                                    </td>
+
+                                                                    <td id="tdtrandate_" class="tdtrandate_@i">
+                                                                        <input type="date" style="display:none" class="form-control" id="txttransdate_@i" name="txttransdate_@i" />
                                                                     </td>
                                                                 </tr>
                                                                 i++;
@@ -131,7 +155,7 @@
                                                 <div class="row">
                                                     <div class="col-lg-12">
                                                         <div class="form-group">
-                                                            <input type="submit" id="Save" name="Save" class="btn btn-success" value="Pay" />
+                                                            <input type="submit" id="Save" name="Save" class="btn btn-success" value="Pay"/>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -198,7 +222,7 @@
                             } else {
                                 $('#ToLoginID').val(strsplit[1].substr(0, strsplit[1].length - 1));
                             }
-                            
+
                         }
                     })
                 }
@@ -208,6 +232,59 @@
             }
         });
     });
+    //function getpaymentdetails() {
+    //    var table = document.getElementById("dataTables-example");
+    //    var paymentmode = ($("#PaymentMode option:selected").text());
+    //    if (paymentmode != "Cash") {
+    //        $('#thbranch').show();
+    //        $('#thbankname').show();
+    //        $('#thtransactionnumber').show();
+    //        $('#thtransactiondate').show();
+    //        $('#tdtrandate_').show();
+    //        $('#tdbranchname_').show();
+    //        $('#tdbankname_').show();
+    //        $('#tdtrancation_').show();
+    //        }
+    //    else {
+    //        $('#thbranch').hide();
+    //        $('#thbankname').hide();
+    //        $('#thtransactionnumber').hide();
+    //        $('#thtransactiondate').hide();
+    //        $('#tdtrandate_').hide();
+    //        $('#tdbranchname_').hide();
+    //        $('#tdbankname_').hide();
+    //        $('#tdtrancation_').hide();
+    //    }
+    //}
+
+    function getpaymentdetails(index) {
+        var paymentmode = $('.ddlPaymentMode_' + index).val();
+
+        $('[name="paymentmode_' + index + '"]').val(paymentmode);
+
+        if (paymentmode == "Cash" || paymentmode == "0") {
+            $('#txtbankname_' + index).hide();
+            $('#txtbankbranch_' + index).hide();
+            $('#txttranno_' + index).hide();
+            $('#txttransdate_' + index).hide();
+            //$('#thbranch').show();
+            //$('#thbankname').show();
+            //$('#thtransactionnumber').show();
+            //$('#thtransactiondate').show();
+        }
+        else {
+            $('#txtbankname_' + index).show();
+            $('#txtbankbranch_' + index).show();
+            $('#txttranno_' + index).show();
+            $('#txttransdate_' + index).show();
+            //$('#thbranch').show();
+            //$('#thbankname').show();
+            //$('#thtransactionnumber').show();
+            //$('#thtransactiondate').show();
+        }
+
+
+    }
 
     function isNumberKey(evt) {
         var charCode = (evt.which) ? evt.which : event.keyCode;
