--- a/HMGreenCityMLM/HMGreenCityMLM/Views/Admin/PayoutLedger.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/Admin/PayoutLedger.cshtml
@@ -40,7 +40,7 @@
                                         <div class="row">
                                             <div class="col-md-4">
                                                 <div class="form-group row">
-                                                    <label class="col-sm-3 col-form-label">From Date </label>
+                                                    <label class="col-sm-3 col-form-label">Login Id </label>
                                                     <div class="col-sm-9">
 
                                                         @Html.TextBoxFor(m => m.LoginId, new { @class = "form-control", @placeholder="Login Id" })
