--- a/HMGreenCityMLM/HMGreenCityMLM/Views/User/AssociateDashBoard.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/User/AssociateDashBoard.cshtml
@@ -320,3 +320,29 @@
     </div>
 </div>
     </div>
+
+<script src="~/scripts/jquery-1.10.2.js"></script>
+<script>
+    $(document).ready(function () {
+        $("#myModal").modal('show');
+    });
+</script>
+<div id="myModal" class="modal fade" role="dialog">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" style="background-color: #fff;">×</button>
+                <h4 class="modal-title"></h4>
+            </div>
+            <div class="modal-body" style="background-color: #fff;">
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="newyear">
+                            <img style="width:100%" src="../WebsiteCss/rewardpop.jpg" class="img-responsive" />
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div> 
