--- a/HMGreenCityMLM/HMGreenCityMLM/Views/Home/Login.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/Home/Login.cshtml
@@ -151,23 +151,23 @@
     <script src="../../AssociatePanelcss/app-assets/js/core/app-menu.min.js"></script>
     <script src="../../AssociatePanelcss/app-assets/js/core/app.min.js"></script>
     <script src="../../AssociatePanelcss/app-assets/js/scripts/components.min.js"></script>
-    @*<script>
+    <script>
     $(document).ready(function () {
         $("#myModal").modal('show');
     });
-    </script>*@
+    </script>
     <div id="myModal" class="modal fade" role="dialog">
         <div class="modal-dialog">
             <div class="modal-content">
-                <!--<div class="modal-header">
+                <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
                     <h4 class="modal-title"></h4>
-                </div>-->
+                </div>
                 <div class="modal-body">
                     <div class="row">
                         <div class="col-md-12">
                             <div class="newyear">
-                                <img style="width:100%" src="../WebsiteCss/hmgreencity.jpg" class="img-responsive" />
+                                <img style="width:100%" src="../WebsiteCss/rewardpop.jpg" class="img-responsive" />
                             </div>
                         </div>
                     </div>
