--- a/HMGreenCityMLM/HMGreenCityMLM/Views/AdminReports/TopupReport.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/AdminReports/TopupReport.cshtml
@@ -38,6 +38,7 @@
                                                     <div class="col-lg-3">
                                                         Login Id
                                                         @Html.TextBoxFor(m => m.LoginId, new { @class = "form-control" })
+                                                        @Html.HiddenFor(m => m.ToLoginID)
                                                     </div>
                                                     <div class="col-lg-3">
                                                         Name
