Paid Payout Date Issue Solved

--- a/HMGreenCityMLM/HMGreenCityMLM/Views/Admin/PaidPayout.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/Admin/PaidPayout.cshtml
@@ -38,11 +38,11 @@
                                             </div>
                                             <div class="col-md-3">
                                                 From Date
-                                                @Html.TextBoxFor(m => m.FromDate, new { @class = "form-control", @placeholder = "From Date" })
+                                                @Html.TextBoxFor(m => m.FromDate, new { @class = "form-control", @placeholder = "From Date",@readonly=true })
                                             </div>
                                             <div class="col-md-3">
                                                 To Date
-                                                @Html.TextBoxFor(m => m.ToDate, new { @class = "form-control", @placeholder = "To Date" })
+                                                @Html.TextBoxFor(m => m.ToDate, new { @class = "form-control", @placeholder = "To Date", @readonly = true })
                                             </div>
                                             <div class="col-md-3">
                                                 <br />
@@ -86,6 +86,7 @@
                                                         <td>@i</td>
                                                         <td>@Item.LoginId</td>
                                                         <td>@Item.DisplayName</td>
+                                                       
                                                         <td>@Item.PaymentDate</td>
                                                         <td>@Item.Amount</td>
                                                         <td>@Item.TransactionDate</td>
@@ -112,21 +113,24 @@
         </div>
     </div>
 }
-                        <script src="../vendor/jquery/jquery.min.js"></script>
-                        <script src="../../vendor/jquery/jquery.min.js"></script>
-                        <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
-                        <link rel="stylesheet" type="text/css" href="https://code.jquery.com/ui/1.12.0/themes/smoothness/jquery-ui.css">
-                        <script>
+<script src="../vendor/jquery/jquery.min.js"></script>
+<script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
+<link rel="stylesheet" type="text/css" href="https://code.jquery.com/ui/1.12.0/themes/smoothness/jquery-ui.css">
+<script src="../../WebsiteCss/js/jquery.js"></script>
+<script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
+<link rel="stylesheet" type="text/css" href="https://code.jquery.com/ui/1.12.0/themes/smoothness/jquery-ui.css">
+<script>
 
-                            $('#FromDate').datepicker({
-                                dateFormat: 'dd/mm/yy',
-                                changeYear: true,
-                                changeMonth: true,
+    $('#FromDate').datepicker({
+        dateFormat: 'dd/mm/yy',
+        changeYear: true,
+        changeMonth: true,
 
-                            });
-                            $('#ToDate').datepicker({
-                                dateFormat: 'dd/mm/yy',
-                                changeYear: true,
-                                changeMonth: true
-                            });
-                        </script>
+    });
+    $('#ToDate').datepicker({
+        dateFormat: 'dd/mm/yy',
+        changeYear: true,
+        changeMonth: true
+    });
+</script>
+
