Popup image change

--- a/HMGreenCityMLM/HMGreenCityMLM/Views/User/AssociateDashBoard.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/User/AssociateDashBoard.cshtml
@@ -338,7 +338,7 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="newyear">
-                            <img style="width:100%" src="../WebsiteCss/rewardpop.jpg" class="img-responsive" />
+                            <img style="width:100%" src="../WebsiteCss/hmpop.jpg" class="img-responsive" />
                         </div>
                     </div>
                 </div>
