--- a/HMGreenCityMLM/HMGreenCityMLM/Views/AdminReports/TopupReport.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/AdminReports/TopupReport.cshtml
@@ -45,8 +45,8 @@
                                                         @Html.TextBoxFor(m => m.Name, new { @class = "form-control" })
                                                     </div>
                                                     <div class="col-lg-3">
-                                                        Package
-                                                        @Html.DropDownListFor(m => m.Package, new SelectList(ViewBag.ddlProduct, "Value", "Text"), new { @class = "form-control" })
+                                                        Site
+                                                        @Html.DropDownListFor(m => m.SiteId, new SelectList(ViewBag.ddlSite, "Value", "Text"), new { @class = "form-control" })
                                                     </div>
                                                     <div class="col-md-3">
                                                         Status
