--- a/HMGreenCityMLM/HMGreenCityMLM/Views/Admin/AdvancePaymentReport.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/Admin/AdvancePaymentReport.cshtml
@@ -39,6 +39,7 @@
                                             <div class="col-md-6 form-group">
                                                 <label>Login ID</label>
                                                 @Html.TextBoxFor(m => m.LoginId, new { @class = "form-control", @placeholder = "Login ID" })
+                                                @Html.HiddenFor(m => m.ToLoginID)
                                             </div>
                                             <div class="col-lg-3 form-group">
                                                 <label>From Date </label>
@@ -96,6 +97,18 @@
 
 
                                                         </tbody>
+                                                        <tfoot>
+                                                            <tr>
+                                                                <th></th>
+                                                                <th></th>
+                                                                <th style="text-align:right">Total Amount</th>
+                                                                <th style="color:dodgerblue;font-weight:800">@ViewBag.Total</th>
+                                                                <th></th>
+                                                                <th></th>
+                                                                <th></th>
+                                                                <th></th>
+                                                            </tr>
+                                                        </tfoot>
                                                     </table>
                                                 </div>
                                             </div>
@@ -131,6 +144,36 @@
     $(document).ready(function () {
         $('#dataTables-example').DataTable({
             responsive: true
+        });
+        $("input").attr("autocomplete", "off");
+
+        var cityuse = [];
+        $("#loader").css({ 'display': '' });
+        $.ajax({
+            url: '/AdminReports/GetUserList',
+            type: 'Post',
+            success: function (response) {
+                if (response != null) {
+
+
+                    $(response).each(function (index, item) {
+                        cityuse.push(item.UserName + "(" + item.LoginIDD + ")");
+                    });
+
+                    $('#LoginId').autocomplete({
+                        source: cityuse,
+                        select: function (event, ui) {
+                            var str = ui.item.label;
+                            var strsplit = str.split("(");
+
+                            $('#ToLoginID').val(strsplit[1].substr(0, strsplit[1].length - 1));
+                        }
+                    })
+                }
+            }, error: function () {
+                alert('Some Thing wrong!');
+                $("#loader").css({ 'display': 'none' });
+            }
         });
     });
 </script>
