--- a/HMGreenCityMLM/HMGreenCityMLM/Views/Admin/PaidPayout.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/Admin/PaidPayout.cshtml
@@ -35,6 +35,7 @@
                                             <div class="col-md-3">
                                                 LoginId
                                                 @Html.TextBoxFor(m => m.LoginId, new { @class = "form-control", @placeholder = "Login Id" })
+                                                @Html.HiddenFor(m => m.ToLoginID)
                                             </div>
                                             <div class="col-md-3">
                                                 From Date
@@ -131,6 +132,43 @@
         dateFormat: 'dd/mm/yy',
         changeYear: true,
         changeMonth: true
+    });
+</script>
+<script>
+    $(document).ready(function () {
+        $('#dataTables-example').DataTable({
+            responsive: true
+        });
+        $("input").attr("autocomplete", "off");
+
+        var cityuse = [];
+        $("#loader").css({ 'display': '' });
+        $.ajax({
+            url: '/AdminReports/GetUserList',
+            type: 'Post',
+            success: function (response) {
+                if (response != null) {
+
+
+                    $(response).each(function (index, item) {
+                        cityuse.push(item.UserName + "(" + item.LoginIDD + ")");
+                    });
+
+                    $('#LoginId').autocomplete({
+                        source: cityuse,
+                        select: function (event, ui) {
+                            var str = ui.item.label;
+                            var strsplit = str.split("(");
+
+                            $('#ToLoginID').val(strsplit[1].substr(0, strsplit[1].length - 1));
+                        }
+                    })
+                }
+            }, error: function () {
+                alert('Some Thing wrong!');
+                $("#loader").css({ 'display': 'none' });
+            }
+        });
     });
 </script>
 
