--- a/HMGreenCityMLM/HMGreenCityMLM/Views/Admin/PayoutLedger.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/Admin/PayoutLedger.cshtml
@@ -44,6 +44,7 @@
                                                     <div class="col-sm-9">
 
                                                         @Html.TextBoxFor(m => m.LoginId, new { @class = "form-control", @placeholder="Login Id" })
+                                                        @Html.HiddenFor(m => m.ToLoginID)
                                                     </div>
                                                 </div>
                                             </div>
@@ -145,6 +146,36 @@
     $(document).ready(function () {
         $('#dataTables-example').DataTable({
             responsive: true
+        });
+        $("input").attr("autocomplete", "off");
+
+        var cityuse = [];
+        $("#loader").css({ 'display': '' });
+        $.ajax({
+            url: '/AdminReports/GetUserList',
+            type: 'Post',
+            success: function (response) {
+                if (response != null) {
+
+
+                    $(response).each(function (index, item) {
+                        cityuse.push(item.UserName + "(" + item.LoginIDD + ")");
+                    });
+
+                    $('#LoginId').autocomplete({
+                        source: cityuse,
+                        select: function (event, ui) {
+                            var str = ui.item.label;
+                            var strsplit = str.split("(");
+
+                            $('#ToLoginID').val(strsplit[1].substr(0, strsplit[1].length - 1));
+                        }
+                    })
+                }
+            }, error: function () {
+                alert('Some Thing wrong!');
+                $("#loader").css({ 'display': 'none' });
+            }
         });
     });
 </script>
