--- a/HMGreenCityMLM/HMGreenCityMLM/Views/User/Registration.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/User/Registration.cshtml
@@ -76,7 +76,7 @@
                                                 @Html.DropDownListFor(m => m.Gender, new SelectList(ViewBag.ddlgender, "Value", "Text"), new { @class = "form-control" })
                                             </div>
                                             <div class="col-md-6 form-group">
-                                                Pan Card
+                                                Pan Card <span style="color: red">*</span>
                                                 @Html.TextBoxFor(m => m.PanCard, new { @class = "form-control", @Placeholder = "Pan Card", @Maxlength = "10", @onchange = "return validatepan(event);" })
                                             </div>
                                             <div class="col-md-12 form-group">
@@ -193,7 +193,16 @@
             $('#MobileNo').focus();
             return false;
         }
-
+        if ($('#MobileNo').val() == '') {
+            $("#MobileNo").addClass('errortext');
+            $('#MobileNo').focus();
+            return false;
+        }
+        if ($('#PanCard').val() == '') {
+            $("#PanCard").addClass('errortext');
+            $('#PanCard').focus();
+            return false;
+        }
         $("#PaymentMethod").attr("disabled", "disabled");
         $("#Commitment").attr("disabled", "disabled");
         $("#MobileNo").attr("disabled", "disabled");
